--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
 	"start": "npm run serve",
-	"heroku-postbuild": "set NPM_CONFIG_PRODUCTION=false YARN_PRODUCTION=false"
+	"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false YARN_PRODUCTION=false"
   },
   "dependencies": {
     "core-js": "^3.8.3",
