--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-	"start": "npm run serve",
-	"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false YARN_PRODUCTION=false"
+    "start": "node server.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "express": "^4.17.3",
+    "serve-static": "^1.14.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
