--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "express": "^4.17.3",
     "serve-static": "^1.14.2",
