--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "serve-static": "^1.14.2",
     "vue": "^3.2.13",
